--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
         </ul>
         </footer>
 
+        <!--Font awesome script-->
+<script src="https://kit.fontawesome.com/ce8a43f771.js" crossorigin="anonymous"></script>
+
+
         
 </body>
 </html>
