add changes after mentor session : footer, home page and signup page

--- a/breakfast.html
+++ b/breakfast.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Healthy food recipe website">
         <meta name="keywords" content="healthy eating health vegetarian food">
         <link rel="stylesheet" href="assets/css/style.css">
-        <title>Portfolio project 1</title>
+        <title>Breakfast | Eat + Fit</title>
     </head>
 <body>
 
