add style to footer and media queries

--- a/breakfast.html
+++ b/breakfast.html
@@ -75,7 +75,7 @@
 <br>
 
         <!-- RECIPES-->
-<div id="breakfastrecipes1">
+<div class="recipes-list-item">
 
 
 <div class="flexleft">
@@ -98,7 +98,7 @@
 
 
 
-<div id="breakfastrecipes2">
+<div class="recipes-list-item">
 
  
 <div class="flexleft">
@@ -118,7 +118,7 @@
 </div>
 
 
-<div id="breakfastrecipes3">
+<div class="recipes-list-item">
 
  
     <div class="flexleft">
@@ -138,7 +138,7 @@
     </div>
 
 
-    <div id="breakfastrecipes4">
+    <div class="recipes-list-item">
 
  
         <div class="flexleft">
