--- a/dinner.html
+++ b/dinner.html
@@ -75,7 +75,7 @@
         <br>
 
         <!-- RECIPES-->
-<div id="dinnerrecipes1">
+<div class="recipes-list-item">
 
 
 <div class="flexleft">
@@ -93,7 +93,7 @@
 
 
 
-<div id="dinnerrecipes2">
+<div class="recipes-list-item">
 
  
 <div class="flexleft">
@@ -113,7 +113,7 @@
 </div>
 
 
-<div id="dinnerrecipes3">
+<div class="recipes-list-item">
 
  
     <div class="flexleft">
@@ -133,7 +133,7 @@
     </div>
 
 
-    <div id="dinnerrecipes4">
+    <div class="recipes-list-item">
 
  
         <div class="flexleft">
