--- a/lunch.html
+++ b/lunch.html
@@ -75,7 +75,7 @@
         <br>
 
         <!-- RECIPES-->
-<div id="lunchrecipes1">
+<div class="recipes-list-item">
 
 
 <div class="flexleft">
@@ -96,7 +96,7 @@
 
 
 
-<div id="lunchrecipes2">
+<div class="recipes-list-item">
 
  
 <div class="flexleft">
@@ -116,7 +116,7 @@
 </div>
 
 
-<div id="lunchrecipes3">
+<div class="recipes-list-item">
 
  
     <div class="flexleft">
@@ -136,7 +136,7 @@
     </div>
 
 
-    <div id="lunchrecipes4">
+    <div class="recipes-list-item">
 
  
         <div class="flexleft">
