--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Healthy food recipe website" />
+        <meta name="description" content="Healthy food recipes website" />
         <meta name="keywords" content="healthy eating health vegetarian food" />
         <link rel="stylesheet" href="assets/css/style.css" />
         <title>Home | Eat + Fit</title>
