add changes to the hyperlinks section

--- a/index.html
+++ b/index.html
@@ -138,10 +138,12 @@
             </section>
 
             <!-- More recipes section with links to other pages-->
-            <h2>Explore our recipes</h2>
+            
             <br />
+<section id="explore">
+<h2>EXPLORE OUR RECIPES</h2>
+            <div id="hyperlinks">
 
-            <section id="hyperlinks">
                 <div class="linkto">
                     <a href="breakfast.html"> <img src="assets/images/breakfast.jpg" alt="breakfast" /> </a>
                 </div>
@@ -152,6 +154,9 @@
 
                 <div class="linkto">
                     <a href="dinner.html"> <img src="assets/images/dinner.jpg" alt="dinner" /> </a>
+
+                </div>
+
                 </div>
             </section>
         </div>
