add content to the about page

--- a/about.html
+++ b/about.html
@@ -65,29 +65,23 @@
             <div class="aboutinfo">
                 <h2>Who are we?</h2>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-                    make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-                    containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    Everything we do is about health. We are advocates of a healthy lifestyle and we are here to bring awareness 
+                    and make people's life easier by providing quick and delicious recipes which are definitely going to make you 
+                    EAT and stay FIT! Join our community and share your recipes with us :)
                 </p>
             </div>
 
             <div class="aboutinfo">
                 <h2>Why eat healthy?</h2>
                 <p>
-                    Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters, as opposed to ing 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
-                    search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-                </p>
+                    A healthy diet is essential for good health and nutrition. 
+                    It protects you against many chronic noncommunicable diseases, 
+                    such as heart disease, diabetes and cancer. Eating a variety of foods and consuming 
+                    less salt, sugars and saturated and industrially-produced 
+                    trans-fats, are essential for healthy diet.                </p>
             </div>
 
-            <div class="aboutinfo">
-                <h2>Why join our community?</h2>
-                <p>
-                    Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters, as opposed to ing 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
-                    search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-                </p>
-            </div>
+            
         </section>
         <!-- More recipes section with links to other pages-->
 
