add content to the breakfast page

--- a/breakfast.html
+++ b/breakfast.html
@@ -56,13 +56,11 @@
             <!-- RECIPES-->
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>RECIPE NAME</h3>
-                    <p>Total calories:</p>
-                    <p>Ingredients:</p>
+                    <h3>Avocado Toast</h3>
+                    <p>Total calories: 142 calories.</p>
+                    <p>Ingredients:Wholegrain bread, avocado, eggs, sesame seeds. </p>
                     <p>
-                        How to make: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-                        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Toast a slice of bread. Top with 1/4 avocado, smashed or sliced. Add any toppings you desire.Serve fresh.
                     </p>
                 </div>
 
@@ -71,10 +69,19 @@
 
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>RECIPE NAME</h3>
-                    <p>Total calories:</p>
-                    <p>Ingredients:</p>
-                    <p>How to make:</p>
+                    <h3>Oladi (Russian Pancakes)</h3>
+                    <p>Total calories: 350 calories</p>
+                    <p>Ingredients:1 lb about 4 cups all-purpose flour
+                        2 cups warm milk
+                        2 eggs
+                        1 1/2 tbsp sugar
+                        3 -4 tbsp vegetable oil
+                        1/2 tsp salt
+                        25 g yeast (about .8 oz)</p>
+                    <p>How to make: Mix yeast with warm milk, add flour and blend until smooth. Allow the dough to rise in a warm place (for about 2 hours). If using the oven/stove for other cooking, you can turn on one burner at very low heat, just enough to create some heat. Put the dough in a bowl, covered with a thin washcloth on the adjacent unlit burner or in the center of the stove to rise. It will also rise at room temperature, but works better warm.
+                        Mix eggs, salt and sugar and 1 tablespoon oil into the dough and allow to rise again (for about 1/2 hour). Without mixing dough again, use a wet spoon to spoon out portions of dough onto a greased hot pan. Dollop out with a soup spoon, the pancakes are small. About the size of a sand-dollar or teacup circumference. They rise like blini, but unlike blini are not thin, they should rise about 2-3cm tall.
+                        Cook on both sides until golden brown.
+                        Serve immediately with preserves and sour cream (or creme fraiche). Also good with honey, farmer's cheese or fresh fruit and sugar. Or any combo you like!</p>
                 </div>
 
                 <div class="flexright">
@@ -84,10 +91,12 @@
 
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>RECIPE NAME</h3>
-                    <p>Total calories:</p>
-                    <p>Ingredients:</p>
-                    <p>How to make:</p>
+                    <h3>Overnight oats</h3>
+                    <p>Total calories: 300-500 calories. </p>
+                    <p>Ingredients: oats, seeds and fruits of your choice. </p>
+                    <p>How to make: To prepare your overnight oats, simply combine all the ingredients and refrigerate them overnight in an airtight container.
+
+                        The oats and chia seeds soak up the milk and soften overnight, yielding a pudding-like texture come the next morning.</p>
                 </div>
 
                 <div class="flexright">
@@ -97,10 +106,13 @@
 
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>RECIPE NAME</h3>
-                    <p>Total calories:</p>
-                    <p>Ingredients:</p>
-                    <p>How to make:</p>
+                    <h3>Oatmeal</h3>
+                    <p>Total calories: 300-500 calories.</p>
+                    <p>Ingredients: oats, seeds and fruits of your choice. </p>
+                    <p>How to make: Combine all ingredients into a small saucepan and turn heat to medium/high.
+Bring to a boil. Then, turn the heat down to low/medium and continually stir for around 
+3-5 minutes as the oatmeal cooks and thickens.
+Once oatmeal is at the desired consistency, remove from heat, and serve immediately.</p>
                 </div>
 
                 <div class="flexright">
