add formatted lunch page html code and check it in the validator

--- a/lunch.html
+++ b/lunch.html
@@ -55,14 +55,10 @@
             <!-- Recipes-->
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>GREEN EDAMAME SALAD   </h3>
+                    <h3>GREEN EDAMAME SALAD</h3>
                     <p>Total calories: 200 calories.</p>
-                    <p>Ingredients: Endamame, vegetables of your choice, avocado, sesame seeds. </p>
-                    <p>How to make:Thaw frozen edamame beans,
-                        Combine with chopped vegetables of your choice,
-                        Cover in your favourite dressing,
-                        Toss to combine,
-                        And that’s it!</p>
+                    <p>Ingredients: Endamame, vegetables of your choice, avocado, sesame seeds.</p>
+                    <p>How to make:Thaw frozen edamame beans, Combine with chopped vegetables of your choice, Cover in your favourite dressing, Toss to combine, And that’s it!</p>
                 </div>
 
                 <div class="flexright"><img src="assets/images/spinachsalad.jpg" alt="spinach salad" /></div>
@@ -71,31 +67,17 @@
             <div class="recipes-list-item">
                 <div class="flexleft">
                     <h3>Tom Yam soup</h3>
-                    <p>Total calories: 20-100 calories. </p>
-                    <p>Ingredients: 4-10 crushed hot red chillies
-                        1 cup sliced mushrooms
-                        2 stalks lemongrass (sliced into 3cm long pieces)
-                        1/2 cup sliced onion
-                        1/2 cup sliced galangal
-                        1/2 cup sliced tomatoes
-                        6 kaffir lime leaves
-                        4 tsp. lime juice
-                        4 tbsp. fish sauce
-                        1 tsp. sugar
-                        1 tbsp. shrimp paste
-                        1 litre of water
-                        10 shrimps/prawns ( take heads off and keep)
-                        2 tbsp. of chopped spring onion
-                        1/2 tsp. salt
-                        2 stems of fresh coriander
-                        4 stems of fresh parsley</p>
+                    <p>Total calories: 20-100 calories.</p>
+                    <p>
+                        Ingredients: 4-10 crushed hot red chillies 1 cup sliced mushrooms 2 stalks lemongrass (sliced into 3cm long pieces) 1/2 cup sliced onion 1/2 cup sliced galangal 1/2 cup sliced tomatoes 6 kaffir lime leaves 4 tsp.
+                        lime juice 4 tbsp. fish sauce 1 tsp. sugar 1 tbsp. shrimp paste 1 litre of water 10 shrimps/prawns ( take heads off and keep) 2 tbsp. of chopped spring onion 1/2 tsp. salt 2 stems of fresh coriander 4 stems of fresh
+                        parsley
+                    </p>
 
-                    <p>How to make: Put water in pot, heat until boiling
-                        Add lemongrass, galangal, shrimp paste, shrimp heads and onion. Cook until fragrant.
-                        Add tomatoes, shrimp meat and mushrooms until cooked.
-                        Add fish sauce, salt, and sugar. Stir thoroughly.
-                        Add lime juice, spring onion, parsley, coriander and lime leaves.
-                        Stir through and serve immediately.</p>
+                    <p>
+                        How to make: Put water in pot, heat until boiling Add lemongrass, galangal, shrimp paste, shrimp heads and onion. Cook until fragrant. Add tomatoes, shrimp meat and mushrooms until cooked. Add fish sauce, salt, and
+                        sugar. Stir thoroughly. Add lime juice, spring onion, parsley, coriander and lime leaves. Stir through and serve immediately.
+                    </p>
                 </div>
 
                 <div class="flexright">
@@ -106,11 +88,12 @@
             <div class="recipes-list-item">
                 <div class="flexleft">
                     <h3>Avocado toast with poached egg</h3>
-                    <p>Total calories: 180 calories. </p>
-                    <p>Ingredients: wholegrain bread, egg, seeds. </p>
-                    <p>How to make: When the water is boiling, turn off the heat and carefully crack the eggs directly into each rim. 
-                        Cover the pot and poach for 5 minutes (4 for super soft, 4:30 for soft, 5 or more for semi-soft yolks). 
-                        While the eggs are cooking, toast the bread and smash the avocado on each piece of toast.</p>
+                    <p>Total calories: 180 calories.</p>
+                    <p>Ingredients: wholegrain bread, egg, seeds.</p>
+                    <p>
+                        How to make: When the water is boiling, turn off the heat and carefully crack the eggs directly into each rim. Cover the pot and poach for 5 minutes (4 for super soft, 4:30 for soft, 5 or more for semi-soft yolks).
+                        While the eggs are cooking, toast the bread and smash the avocado on each piece of toast.
+                    </p>
                 </div>
 
                 <div class="flexright">
@@ -121,16 +104,14 @@
             <div class="recipes-list-item">
                 <div class="flexleft">
                     <h3>Quinoa Salad</h3>
-                    <p>Total calories: 240 calories. </p>
+                    <p>Total calories: 240 calories.</p>
                     <p>Ingredients: quinoa, red pepper, broccoli, tomatoes, carotts, cucumbers, garlic powder, olive oil.</p>
-                    <p>How to make: Bring water to a boil in a saucepan over medium-high heat. Add quinoa, reduce heat and simmer for 15 to 20 minutes or until tender. 
-                        Drain well and chill.
-                        Attach slicing disc to KitchenAid®7-Cup Food Processor. 
-                        Slice red pepper, green pepper, yellow pepper, onion, red tomatoes, yellow tomatoes and radishes. 
-                        Transfer sliced vegetables to a large serving bowl. Add cooked quinoa, grapefruit and pumpkin. Toss well to mix.
-                        Exchange slicing disc for multipurpose blade. Add olive oil, lemon juice, salt, pepper and sugar to work bowl. 
-                        Process on low to blend well. Pour dressing over quinoa mixture and toss to mix. 
-                        Refrigerate for 30 minutes before serving. </p>
+                    <p>
+                        How to make: Bring water to a boil in a saucepan over medium-high heat. Add quinoa, reduce heat and simmer for 15 to 20 minutes or until tender. Drain well and chill. Attach slicing disc to KitchenAid®7-Cup Food
+                        Processor. Slice red pepper, green pepper, yellow pepper, onion, red tomatoes, yellow tomatoes and radishes. Transfer sliced vegetables to a large serving bowl. Add cooked quinoa, grapefruit and pumpkin. Toss well to
+                        mix. Exchange slicing disc for multipurpose blade. Add olive oil, lemon juice, salt, pepper and sugar to work bowl. Process on low to blend well. Pour dressing over quinoa mixture and toss to mix. Refrigerate for 30
+                        minutes before serving.
+                    </p>
                 </div>
 
                 <div class="flexright">
