add formatted code and check it in the validator

--- a/dinner.html
+++ b/dinner.html
@@ -58,32 +58,18 @@
             <div class="recipes-list-item">
                 <div class="flexleft">
                     <h3>STUFFED AUBERGINES</h3>
-                    <p>Total calories: 266 calories. </p>
-                    <p>Ingredients:2 aubergines
-                        2 tbsp olive oil, plus extra for drizzling
-                        1 large onion, finely chopped
-                        4 garlic cloves, finely chopped
-                        12 cherry tomatoes, halved
-                        50g pitted green olives, chopped
-                        handful basil leaves, chopped
-                        125g ball vegetarian mozzarella, torn into bite-size pieces
-                        handful fresh white breadcrumbs</p>
-                    <p>How to make: 
-                        STEP 1
-                        Heat oven to 220C/200C fan/gas 7. Slice the aubergines in half lengthways, leaving the stem intact. 
-                        Using a small knife, cut a border inside each aubergine about ½-1cm thick. Using a teaspoon, scoop out 
-                        the aubergine flesh, so that you have 4 shells. Brush these with a little of the oil, season and place 
-                        in a baking dish. Cover with foil and bake for 20 mins. Chop the flesh and place to one side.
-                        
-                        STEP 2
-                        Meanwhile, add the remaining oil to a non-stick frying pan. Tip in the onion and cook until soft. 
-                        Add the chopped aubergine flesh and cook through. Tip in the garlic and tomatoes and cook for 3 mins more. 
-                        Stir in olives, basil, mozzarella and seasoning.
-                        
-                        STEP 3
-                        When the aubergine shells are tender, remove from the oven and reduce heat to 200C/180C fan/gas 6. 
-                        Pile stuffing into shells, sprinkle with breadcrumbs and drizzle with a little more oil. Bake for 15-20 mins,
-                         until the cheese is gooey and the breadcrumbs are golden. Serve with a green salad.</p>
+                    <p>Total calories: 266 calories.</p>
+                    <p>
+                        Ingredients:2 aubergines 2 tbsp olive oil, plus extra for drizzling 1 large onion, finely chopped 4 garlic cloves, finely chopped 12 cherry tomatoes, halved 50g pitted green olives, chopped handful basil leaves,
+                        chopped 125g ball vegetarian mozzarella, torn into bite-size pieces handful fresh white breadcrumbs
+                    </p>
+                    <p>
+                        How to make: STEP 1 Heat oven to 220C/200C fan/gas 7. Slice the aubergines in half lengthways, leaving the stem intact. Using a small knife, cut a border inside each aubergine about ½-1cm thick. Using a teaspoon,
+                        scoop out the aubergine flesh, so that you have 4 shells. Brush these with a little of the oil, season and place in a baking dish. Cover with foil and bake for 20 mins. Chop the flesh and place to one side. STEP 2
+                        Meanwhile, add the remaining oil to a non-stick frying pan. Tip in the onion and cook until soft. Add the chopped aubergine flesh and cook through. Tip in the garlic and tomatoes and cook for 3 mins more. Stir in
+                        olives, basil, mozzarella and seasoning. STEP 3 When the aubergine shells are tender, remove from the oven and reduce heat to 200C/180C fan/gas 6. Pile stuffing into shells, sprinkle with breadcrumbs and drizzle with
+                        a little more oil. Bake for 15-20 mins, until the cheese is gooey and the breadcrumbs are golden. Serve with a green salad.
+                    </p>
                 </div>
 
                 <div class="flexright"><img src="assets/images/aubergine.jpg" alt="spinach salad" /></div>
@@ -92,25 +78,16 @@
             <div class="recipes-list-item">
                 <div class="flexleft">
                     <h3>Pumpkin Soup</h3>
-                    <p>Total calories: 60-150 calories. </p>
-                    <p>Ingredients: 1 tablespoon olive oil
-                        1 small onion, sliced
-                        2 cloves garlic, chopped or pressed
-                        1 tablespoon grated fresh ginger
-                        1 tablespoon ground coriander seed
-                        1 teaspoon ground cinnamon
-                        1/4 teaspoon ground nutmeg
-                        Pinch of cayenne pepper
-                        1/2 cup dry white wine
-                        1 (15- to 16-ounce) can pumpkin (not pumpkin pie filling)
-                        2 cups chicken broth (can use bouillion)
-                        1 cup half and half </p>
-                    <p>How to make: In a large pot (a 2-quart pot works well), heat the oil and saute the onions until soft.
-                    Add the garlic and ginger and cook for another 30 seconds, 
-                    and then add the spices and cook for another 30 seconds or so (until fragrant, but do not let the spices burn).
-                    Add the wine, and stir for another minute. Remove from heat.
-                    Add the pumpkin and half of the broth. Puree with a stick blender, or in a standing blender or food processor. 
-                    When the soup is smooth, heat it in the pot with the remaining broth and half and half until simmering.</p>
+                    <p>Total calories: 60-150 calories.</p>
+                    <p>
+                        Ingredients: 1 tablespoon olive oil 1 small onion, sliced 2 cloves garlic, chopped or pressed 1 tablespoon grated fresh ginger 1 tablespoon ground coriander seed 1 teaspoon ground cinnamon 1/4 teaspoon ground nutmeg
+                        Pinch of cayenne pepper 1/2 cup dry white wine 1 (15- to 16-ounce) can pumpkin (not pumpkin pie filling) 2 cups chicken broth (can use bouillion) 1 cup half and half
+                    </p>
+                    <p>
+                        How to make: In a large pot (a 2-quart pot works well), heat the oil and saute the onions until soft. Add the garlic and ginger and cook for another 30 seconds, and then add the spices and cook for another 30 seconds
+                        or so (until fragrant, but do not let the spices burn). Add the wine, and stir for another minute. Remove from heat. Add the pumpkin and half of the broth. Puree with a stick blender, or in a standing blender or food
+                        processor. When the soup is smooth, heat it in the pot with the remaining broth and half and half until simmering.
+                    </p>
                 </div>
 
                 <div class="flexright">
@@ -121,19 +98,15 @@
             <div class="recipes-list-item">
                 <div class="flexleft">
                     <h3>CHICKPEAS SALAD</h3>
-                    <p>Total calories: 244 calories. </p>
-                    <p>Ingredients: 1 can chickpeas rinsed & drained
-                        3 stalks celery diced
-                        1 of each red & orange peppers diced
-                        1 whole cucumber diced
-                        1/4 cup lemon juice freshly squeezed
-                        1/2 tsp sea salt
-                        1 clove garlic minced
-                        1/2 cup olive oil </p>
-                    <p>How to make:Rinse and drain chickpeas. Combine the chickpeas and veggies in a bowl. In a small jar, 
-                        add lemon juice, sea salt, garlic and olive oil. Put a lid on the jar and give it a quick shake. 
-                        Drizzle over salad and enjoy! You can also switch up the recipe a little bit by adding fresh cilantro to the salad. 
-                        Cilantro is delicious and is high in antioxidants and may help regulate blood sugar levels.</p>
+                    <p>Total calories: 244 calories.</p>
+                    <p>
+                        Ingredients: 1 can chickpeas rinsed & drained 3 stalks celery diced 1 of each red & orange peppers diced 1 whole cucumber diced 1/4 cup lemon juice freshly squeezed 1/2 tsp sea salt 1 clove garlic minced 1/2 cup
+                        olive oil
+                    </p>
+                    <p>
+                        How to make:Rinse and drain chickpeas. Combine the chickpeas and veggies in a bowl. In a small jar, add lemon juice, sea salt, garlic and olive oil. Put a lid on the jar and give it a quick shake. Drizzle over salad
+                        and enjoy! You can also switch up the recipe a little bit by adding fresh cilantro to the salad. Cilantro is delicious and is high in antioxidants and may help regulate blood sugar levels.
+                    </p>
                 </div>
 
                 <div class="flexright">
@@ -145,25 +118,15 @@
                 <div class="flexleft">
                     <h3>VEGAN NUGGET BOWL</h3>
                     <p>Total calories: 700 calories.</p>
-                    <p>Ingredients: 280g Quorn Vegan Nuggets
-                        600 g of mixed root vegetables (eg potatoes, parsnip, carrot)
-                        200 g edamame beans
-                        100 g fresh spinach
-                        Oil
-                        Salt
-                        Pepper
-                        2½ tbsp corn starch
-                        4 tablespoons rice or white wine vinegar
-                        4 tablespoons sugar
-                        4 tablespoons ketchup
-                        1 teaspoon salt
-                        2 dl of water
-                        1 tablespoon oil</p>
-                    <p>How to make: Cut the vegetables into strips and put them in the oven with a little oil at 200 degrees about 20 minutes. Turn often so they do not burn. Season with salt and pepper.
-                        Prepare nuggets according to the pack instructions.
-                        Dipping sauce: Boil all ingredients in a saucepan. Dissolve the corn starch in some water and pour it into the sauce. Boil for another minute then let the sauce cool.
-                        Layer the nuggets, roasted root vegetables, edamame beans, and spinach in a bowl. Pour over the sauce and serve.
-                        422 calories per serving</p>
+                    <p>
+                        Ingredients: 280g Quorn Vegan Nuggets 600 g of mixed root vegetables (eg potatoes, parsnip, carrot) 200 g edamame beans 100 g fresh spinach Oil Salt Pepper 2½ tbsp corn starch 4 tablespoons rice or white wine vinegar
+                        4 tablespoons sugar 4 tablespoons ketchup 1 teaspoon salt 2 dl of water 1 tablespoon oil
+                    </p>
+                    <p>
+                        How to make: Cut the vegetables into strips and put them in the oven with a little oil at 200 degrees about 20 minutes. Turn often so they do not burn. Season with salt and pepper. Prepare nuggets according to the
+                        pack instructions. Dipping sauce: Boil all ingredients in a saucepan. Dissolve the corn starch in some water and pour it into the sauce. Boil for another minute then let the sauce cool. Layer the nuggets, roasted
+                        root vegetables, edamame beans, and spinach in a bowl. Pour over the sauce and serve. 422 calories per serving
+                    </p>
                 </div>
 
                 <div class="flexright">
