add comments to the css file

--- a/about.html
+++ b/about.html
@@ -65,8 +65,7 @@
             <div class="aboutinfo">
                 <h2>Who are we?</h2>
                 <p>
-                    Everything we do is about health. We are advocates of a healthy lifestyle and we are here to bring awareness 
-                    and make people's life easier by providing quick and delicious recipes which are definitely going to make you 
+                    Everything we do is about health. We are advocates of a healthy lifestyle and we are here to bring awareness and make people's life easier by providing quick and delicious recipes which are definitely going to make you
                     EAT and stay FIT! Join our community and share your recipes with us :)
                 </p>
             </div>
@@ -74,14 +73,10 @@
             <div class="aboutinfo">
                 <h2>Why eat healthy?</h2>
                 <p>
-                    A healthy diet is essential for good health and nutrition. 
-                    It protects you against many chronic noncommunicable diseases, 
-                    such as heart disease, diabetes and cancer. Eating a variety of foods and consuming 
-                    less salt, sugars and saturated and industrially-produced 
-                    trans-fats, are essential for healthy diet.                </p>
+                    A healthy diet is essential for good health and nutrition. It protects you against many chronic noncommunicable diseases, such as heart disease, diabetes and cancer. Eating a variety of foods and consuming less salt,
+                    sugars and saturated and industrially-produced trans-fats, are essential for healthy diet.
+                </p>
             </div>
-
-            
         </section>
         <!-- More recipes section with links to other pages-->
 
