add changes after session with the mentor

--- a/dinner.html
+++ b/dinner.html
@@ -7,11 +7,12 @@
         <meta name="description" content="Healthy food recipe website" />
         <meta name="keywords" content="healthy eating health vegetarian food" />
         <link rel="stylesheet" href="assets/css/style.css" />
-        <title>Dinner| Eat + Fit</title>
+        <title>Dinner | Eat + Fit</title>
     </head>
     <body>
         <!-- Header-->
 
+        
         <header>
             <div id="logo">
                 <a href="index.html"> <img src="assets/images/logo.jpg" alt="logo" /> </a>
@@ -40,11 +41,12 @@
                     </li>
                 </ul>
 
-                <!--Signup Button-->
-                <div id="signupbtn">
-                    <a href="signup.html"> Sign up <i class="fas fa-user-plus"></i> </a>
-                </div>
             </nav>
+
+             <!--SIGNUP BUTTON-->
+             <div id="signupbtn">
+                <a href="signup.html"> Sign up <i class="fas fa-user-plus"></i> </a>
+            </div>
         </header>
 
         <section id="lunchrecipes">
