--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h3>
                         Sign up to our Newsletter to get FREE recipes every day
                         <br />
-                        <a href="signup.html"> <i class="fas fa-user-plus"></i> </a>
+                       
                     </h3>
                 </div>
             </section>
@@ -71,11 +71,11 @@
             <!-- Menu of the day section-->
             <br />
             <section id="moftheday">
-                <h1><i class="fas fa-utensils"> </i> MENU OF THE DAY <i class="fas fa-utensils"></i></h1>
+                <h2><i class="fas fa-utensils"> </i> MENU OF THE DAY <i class="fas fa-utensils"></i></h2>
 
-                <div id="breakfast">
+                <div class="menu-list-item">
                     <div class="recipe">
-                        <h2>Overnight oats with raspberries</h2>
+                        <h3>Overnight oats with raspberries</h3>
                         <br />
                         <p>Total calories: 196 calories</p>
                         <br />
@@ -86,20 +86,20 @@
                             into a bowl, top with milk and store in the fridge overnight.
                         </p>
                     </div>
-                    <div id="brimage">
+                    <div class="image">
                         <img src="assets/images/mofthedaybr.jpg" alt="overnight oats" />
                     </div>
                 </div>
 
                 <br />
 
-                <div id="lunch">
-                    <div id="limage">
+                <div class="menu-list-item">
+                    <div class="image">
                         <img src="assets/images/mofthedayl.jpg" alt="mushroom risotto" />
                     </div>
 
                     <div class="recipe">
-                        <h2>Wild mushroom risotto</h2>
+                        <h3>Wild mushroom risotto</h3>
                         <br />
                         <p>Total calories: 340 calories</p>
                         <br />
@@ -116,9 +116,9 @@
                     </div>
                 </div>
 
-                <div id="dinner">
+                <div class="menu-list-item">
                     <div class="recipe">
-                        <h2>Quorn lasagna</h2>
+                        <h3>Quorn lasagna</h3>
                         <br />
                         <p>Total calories: 329 calories</p>
                         <br />
@@ -131,7 +131,7 @@
                             Continue layering the Quorn sauce and lasagne sheets. Cover the top of the lasagne with the remaining sauce and sprinkle with the grated cheese. Bake the lasagne in the oven for 35-40 mins until brown.
                         </p>
                     </div>
-                    <div id="dimage">
+                    <div class="image">
                         <img src="assets/images/mofthedayd.jpg" alt="quron lasagna" />
                     </div>
                 </div>
