--- a/signup.html
+++ b/signup.html
@@ -7,11 +7,12 @@
         <meta name="description" content="Healthy food recipe website" />
         <meta name="keywords" content="healthy eating health vegetarian food" />
         <link rel="stylesheet" href="assets/css/style.css" />
-        <title>Sign up| Eat + Fit</title>
+        <title>Sign up | Eat + Fit</title>
     </head>
     <body>
         <!-- HEADER-->
 
+      
         <header>
             <div id="logo">
                 <a href="index.html"> <img src="assets/images/logo.jpg" alt="logo" /> </a>
@@ -40,18 +41,19 @@
                     </li>
                 </ul>
 
-                <!--SIGNUP BUTTON-->
-                <div id="signupbtn">
-                    <a href="signup.html"> Sign up <i class="fas fa-user-plus"></i> </a>
-                </div>
             </nav>
+
+             <!--SIGNUP BUTTON-->
+             <div id="signupbtn">
+                <a href="signup.html"> Sign up <i class="fas fa-user-plus"></i> </a>
+            </div>
         </header>
 
         <div id="signuppage">
             <!--Signup FORM-->
 
             <section class="form-section">
-                <form method="POST" action="https://formdump.codeinstitute.net/" id="signupform">
+                <form method="POST" action="https://formdump.codeinstitute.net/" id="signup-form">
                     <h2>GET FREE RECIPES EVERY WEEK!</h2>
 
                     <label for="fname">First name:</label>
@@ -75,7 +77,7 @@
                     <label for="carnivore">Carnivore</label>
                     <input type="radio" id="carnivore" name="diet" value="carnivore" required />
 
-                    <input type="submit" value="Bon Appétit!" id="signupbutton" />
+                    <input type="submit" value="Bon Appétit!" id="signup-button" />
                 </form>
             </section>
         </div>
