--- a/breakfast.html
+++ b/breakfast.html
@@ -12,6 +12,7 @@
     <body>
         <!-- Header-->
 
+     
         <header>
             <div id="logo">
                 <a href="index.html"> <img src="assets/images/logo.jpg" alt="logo" /> </a>
@@ -40,11 +41,12 @@
                     </li>
                 </ul>
 
-                <!--Signup Button-->
-                <div id="signupbtn">
-                    <a href="signup.html"> Sign up <i class="fas fa-user-plus"></i> </a>
-                </div>
             </nav>
+
+             <!--SIGNUP BUTTON-->
+             <div id="signupbtn">
+                <a href="signup.html"> Sign up <i class="fas fa-user-plus"></i> </a>
+            </div>
         </header>
 
         <section id="breakfastrecipes">
