add more changes to css

--- a/breakfast.html
+++ b/breakfast.html
@@ -58,7 +58,7 @@
             <!-- Recipes-->
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>Avocado Toast</h3>
+                    <h3>AVOCADO TOAST</h3>
                     <p>Total calories: 142 calories.</p>
                     <p>Ingredients:Wholegrain bread, avocado, eggs, sesame seeds.</p>
                     <p>
@@ -71,7 +71,7 @@
 
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>Oladi (Russian Pancakes)</h3>
+                    <h3>OLADI (Russian Pancakes)</h3>
                     <p>Total calories: 350 calories</p>
                     <p>Ingredients:1 lb about 4 cups all-purpose flour 2 cups warm milk 2 eggs 1 1/2 tbsp sugar 3 -4 tbsp vegetable oil 1/2 tsp salt 25 g yeast (about .8 oz)</p>
                     <p>
@@ -90,7 +90,7 @@
 
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>Overnight oats</h3>
+                    <h3>OVERNIGHT OATS</h3>
                     <p>Total calories: 300-500 calories.</p>
                     <p>Ingredients: oats, seeds and fruits of your choice.</p>
                     <p>
@@ -106,7 +106,7 @@
 
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>Oatmeal</h3>
+                    <h3>OATMEAL/h3>
                     <p>Total calories: 300-500 calories.</p>
                     <p>Ingredients: oats, seeds and fruits of your choice.</p>
                     <p>
